[gd_scene load_steps=7 format=3 uid="uid://c856jox12fncy"]

[ext_resource type="Script" uid="uid://bxxj8iglt8ihx" path="res://Npcs/artist.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://ddlfavgbwvflg" path="res://assets/Artist/Painting.png" id="1_txy1b"]
[ext_resource type="Texture2D" uid="uid://ct2hl1is10uvd" path="res://assets/Artist/Artist_closed.png" id="2_714op"]
[ext_resource type="Texture2D" uid="uid://cpfwsqm7dvd4g" path="res://assets/Artist/Artist_open.png" id="3_e14b6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b5tpc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_714op")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_714op")
}, {
"duration": 1.0,
"texture": ExtResource("3_e14b6")
}],
"loop": true,
"name": &"Talk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1wyg"]
size = Vector2(69, 72)

[node name="Artist" type="Node2D"]
script = ExtResource("1_script")

[node name="Area2D" type="Area2D" parent="."]

[node name="EaselSprite" type="Sprite2D" parent="Area2D"]
position = Vector2(27, -3)
scale = Vector2(1.1875, 1.125)
texture = ExtResource("1_txy1b")

[node name="ArtistSprite" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_b5tpc")
animation = &"Talk"
autoplay = "Idle"
frame = 1
frame_progress = 0.59338576

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(13.5, 1)
shape = SubResource("RectangleShape2D_h1wyg")

[node name="DialogueLabel" type="Label" parent="."]
offset_left = -100.0
offset_top = -100.0
offset_right = 140.0
offset_bottom = -50.0
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
